# LearningRust

./: README.md
BackEnd_Project/: Cargo.toml
BackEnd_Project/SQL/: Database_Create_Query.sql
HelloWorld/: main.rs
back_end_project/: Cargo.toml
back_end_project/SQL/: CustomerTable_TestData_Insert_Query.sql  OrderTable_TestData_Insert_Query.sql  ProductTable_TestData_Insert_Query.sql
back_end_project/src/: main.rs  productGenerator.rs
guessing_game/src/: main.rs
rocket_example/: Cargo.toml
rocket_example/src/: main.rs
rocket_example/src/postman_tests/: rocket_example tests Copy.postman_collection.json
rocket_example/src/routes/: database.rs
rocket_example/src/services/: database.rs  mod.rs
variables/src/: main.rs
