[package]
name = "rocket_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = { version = "1.0.136", features = ["derive"] }
chrono = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]