[package]
name = "rocket_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = {version = "1.0.66"}
chrono = "0.4"
postgres = "0.19.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool", "json"]